Try to use github.ref

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,44 +18,44 @@ env:
 jobs:
   # Run the unit tests.
   unit-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@master
   
   # Run tests for the standalone compiler.
   lfc-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/lfc-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/lfc-tests.yml@master
 
   # Run the C benchmark tests. 
   c-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'C'
 
   # Run the C integration tests.
   c-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@master
   
   # Run the CCpp integration tests.
   ccpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@master
     with:
       use-cpp: true
   
   # Run the C++ benchmark tests.
   cpp-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
 
   # Run the C++ integration tests.
   cpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cpp-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/cpp-tests.yml@master
 
   # Run the Python integration tests.
   py-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@master
 
   # Run the Rust integration tests.
   rs-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@master
 
   # Run the TypeScript integration tests.
   ts-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@modular-ci
+    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@${{ github.ref }}
