--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -50,6 +50,11 @@ jobs:
       - name: Install RTI
         uses: ./.github/actions/install-rti
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
+      - name: Build RTI docker image;
+        run: |
+          cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
+          docker build -t rti:rti -f rti.Dockerfile ../../../core/
+        if: ${{ runner.os == 'Linux' }}
       - name: Perform tests for C target
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.*
