--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -64,6 +64,11 @@ jobs:
           path: org.lflang/src/lib/py/reactor-c-py
           ref: ${{ inputs.reactor-c-py-ref }}
         if: ${{ inputs.reactor-c-py-ref }}
+      - name: Build RTI docker image;
+        run: |
+          cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
+          docker build -t rti:rti -f rti.Dockerfile ../../../core/
+        if: ${{ runner.os == 'Linux' }}
       - name: Run Python tests
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
