--- a/.github/workflows/extract-ref.yml
+++ b/.github/workflows/extract-ref.yml
@@ -3,8 +3,8 @@ name: Extract ref from file
 on:
   workflow_call:
     inputs:
-      sha1-file:
-        description: Name of the sha1 file to extract the ref from
+      file:
+        description: Name of the file to extract the ref from
         type: string
         required: false
     outputs:
@@ -20,6 +20,6 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      - name: Extract ref from ${{ inputs.sha1-file }}
+      - name: Extract ref from ${{ inputs.file }}
         id: read
-        run: echo "::set-output name=ref::$(head -n 1 ${{ inputs.sha1-file }})"
+        run: echo "::set-output name=ref::$(head -n 1 ${{ inputs.file }})"
