--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   # Run the unit tests.
   unit-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@codecov
+    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@master
   
   # Run tests for the standalone compiler.
   cli-tests:
@@ -32,11 +32,11 @@ jobs:
 
   # Run the C integration tests.
   c-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@codecov
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@master
   
   # Run the CCpp integration tests.
   ccpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@codecov
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@master
     with:
       use-cpp: true
   
@@ -46,15 +46,15 @@ jobs:
 
   # Run the C++ integration tests.
   cpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cpp-tests.yml@codecov
+    uses: lf-lang/lingua-franca/.github/workflows/cpp-tests.yml@master
 
   # Run the Python integration tests.
   py-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@codecov
+    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@master
 
   # Run the Rust integration tests.
   rs-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@codecov
+    uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@master
 
   # Run the TypeScript integration tests.
   ts-tests:
