--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -69,7 +69,8 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
       - name: Run Python tests
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
+          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.* \
+             --tests org.lflang.tests.lsp.LspTests.LspWithDependenciesTestPython
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
