--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -55,8 +55,15 @@ jobs:
         if: ${{ runner.os == 'Linux' }} 
       - name: Perform tests for C target
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.CTest.*
+          ./gradlew test --tests org.lflang.tests.runtime.CTest.* \
+             --tests org.lflang.tests.lsp.LspTests.LspWithDependenciesTestC
         if: ${{ !inputs.use-cpp }}
+      - name: Report to CodeCov
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          file: org.lflang.tests/build/reports/xml/jacoco
+          fail_ci_if_error: false
+          verbose: true
       - name: Perform tests for CCpp target
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CCppTest.*
