--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   # Run the unit tests.
   unit-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@${{ github.ref }}
+    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@master
   
   # Run tests for the standalone compiler.
   cli-tests:
