--- a/.github/workflows/latest-release.yml
+++ b/.github/workflows/latest-release.yml
@@ -1,4 +1,4 @@
-name: Report the version of the latest release
+name: Latest release
 
 on:
   workflow_call:
@@ -22,6 +22,9 @@ jobs:
           wget -O /usr/local/bin/semver https://raw.githubusercontent.com/fsaintjacques/semver-tool/master/src/semver
           chmod +x /usr/local/bin/semver
           semver --version
-      - name: Find the last version
+      - name: Find the lastest release
         id: find
-        run: echo "::set-output name=version::$(.github/scripts/latest-release.sh)"
+        run: |
+          export latest=$(.github/scripts/latest-release.sh)
+          echo "Latest release: ${latest}"
+          echo "::set-output name=version::${latest}"
