--- a/.github/workflows/latest-release.yml
+++ b/.github/workflows/latest-release.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  run:
+  find-latest:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.find.outputs.version }}
@@ -22,6 +22,8 @@ jobs:
           wget -O /usr/local/bin/semver https://raw.githubusercontent.com/fsaintjacques/semver-tool/master/src/semver
           chmod +x /usr/local/bin/semver
           semver --version
+      - name: Fetch all tags
+        run: git fetch --all --tags
       - name: Find the lastest release
         id: find
         run: |
