CI: Test Python validation without Pylint.

--- a/.github/workflows/lsp-tests.yml
+++ b/.github/workflows/lsp-tests.yml
@@ -29,8 +29,6 @@ jobs:
         with:
           rust-version: nightly
           components: clippy
-      - name: Install pylint
-        run: python3 -m pip install pylint
       - name: Install Dependencies Ubuntu
         run: sudo apt-get install libprotobuf-dev protobuf-compiler libprotobuf-c-dev protobuf-c-compiler
         if: ${{ runner.os == 'Linux' }}
@@ -49,6 +47,10 @@ jobs:
           vcpkgDirectory: ${{ github.workspace }}/vcpkg/
           vcpkgTriplet: x64-windows-static
         if: ${{ runner.os == 'Windows' }}
+      - name: Run language server Python tests without PyLint
+        run: ./gradlew test --tests org.lflang.tests.lsp.LspTests.pythonValidationTest
+      - name: Install pylint
+        run: python3 -m pip install pylint
       - name: Run language server tests
         run: ./gradlew test --tests org.lflang.tests.lsp.LspTests.*ValidationTest
       - name: Report to CodeCov
