Revert "CI: Attempt to repair holes in CodeCov reports."
This reverts commit 4f27097f1ad1fc290d4983b9eca886354ebc3486.

--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -69,17 +69,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
       - name: Run Python tests
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
-      - name: Report to CodeCov
-        uses: codecov/codecov-action@v2.1.0
-        with:
-          file: org.lflang.tests/build/reports/xml/jacoco
-          fail_ci_if_error: false
-          verbose: true
-        if: ${{ !inputs.compiler-ref }}  # i.e., if this is part of the main repo's CI
-      - name: Run language server Python tests
-        run: |
-          ./gradlew test --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestPython
+          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestPython
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
