--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -55,7 +55,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }} 
       - name: Perform tests for C target
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.CTest.*
+          ./gradlew test --tests org.lflang.tests.runtime.CTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestC
         if: ${{ !inputs.use-cpp }}
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
@@ -63,17 +63,6 @@ jobs:
           file: org.lflang.tests/build/reports/xml/jacoco
           fail_ci_if_error: false
           verbose: true
-      - name: Run language server C tests
-        run: |
-          ./gradlew test --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestC
-        if: ${{ !inputs.use-cpp }}
-      - name: Report to CodeCov
-        uses: codecov/codecov-action@v2.1.0
-        with:
-          file: org.lflang.tests/build/reports/xml/jacoco
-          fail_ci_if_error: false
-          verbose: true
-        if: ${{ !inputs.compiler-ref }}  # i.e., if this is part of the main repo's CI
       - name: Perform tests for CCpp target
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CCppTest.*
