--- a/.github/workflows/cpp-tests.yml
+++ b/.github/workflows/cpp-tests.yml
@@ -23,16 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run C++ tests;
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.CppTest.*
-      - name: Report to CodeCov
-        uses: codecov/codecov-action@v2.1.0
-        with:
-          file: org.lflang.tests/build/reports/xml/jacoco
-          fail_ci_if_error: false
-          verbose: true
-        if: ${{ !inputs.compiler-ref }}  # i.e., if this is part of the main repo's CI
-      - name: Run language server C++ tests
-        run: ./gradlew test --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestCpp
+          ./gradlew test --tests org.lflang.tests.runtime.CppTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestCpp
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
