--- a/.github/workflows/rs-tests.yml
+++ b/.github/workflows/rs-tests.yml
@@ -27,17 +27,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run Rust tests
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.RustTest.*
-      - name: Report to CodeCov
-        uses: codecov/codecov-action@v2.1.0
-        with:
-          file: org.lflang.tests/build/reports/xml/jacoco
-          fail_ci_if_error: false
-          verbose: true
-        if: ${{ !inputs.compiler-ref }}  # i.e., if this is part of the main repo's CI
-      - name: Run language server Rust tests
-        run: |
-          ./gradlew test --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestRust
+          ./gradlew test --tests org.lflang.tests.runtime.RustTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestRust
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
