--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
   # Run the C benchmark tests. 
   c-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
+    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@more-rust-benchmarks
     with:
       target: 'C'
 
@@ -42,7 +42,9 @@ jobs:
   
   # Run the C++ benchmark tests.
   cpp-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
+    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@more-rust-benchmarks
+    with:
+      target: 'Cpp'
 
   # Run the C++ integration tests.
   cpp-tests:
@@ -56,6 +58,12 @@ jobs:
   rs-tests:
     uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@master
 
+  # Run the Rust benchmark tests.
+  rs-tests:
+    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
+
   # Run the TypeScript integration tests.
   ts-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@master
+    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@more-rust-benchmarks
+    with:
+      target: 'Rust'
