--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -63,6 +63,7 @@ jobs:
           file: org.lflang.tests/build/reports/xml/jacoco
           fail_ci_if_error: false
           verbose: true
+        if: ${{ !inputs.compiler-ref }}  # i.e., if this is part of the main repo's CI
       - name: Perform tests for CCpp target
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CCppTest.*
