--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <tycho-version>2.3.0</tycho-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- When the Eclipse p2 site is updated to a new version of Eclipse, then update the xtext.version. -->
-        <xtext.version>2.26.0.M2</xtext.version>
+        <xtext.version>2.26.0</xtext.version>
         <tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
     </properties>
 
