--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -11,4 +11,5 @@ jobs:
     uses: lf-lang/lingua-franca/.github/workflows/build.yml@master
     with:
       nightly: true
+    secrets:
       envPAT: ${{ secrets.NIGHTLY_BUILD }}
