rename kotlin version property

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <properties>
         <!-- Sync with build.gradle -->
         <!-- Note that this version is forced upon us by https://github.com/JetBrains/kotlin-eclipse -->
-        <kotlin.version>1.4.10</kotlin.version>
+        <kotlinVersion>1.4.10</kotlinVersion>
+        <lsp4jVersion>1.4.10</lsp4jVersion>
         <tycho-version>2.3.0</tycho-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- When the Eclipse p2 site is updated to a new version of Eclipse, then update the xtext.version. -->
@@ -120,7 +121,7 @@
                 <plugin>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
-                    <version>${kotlin.version}</version>
+                    <version>${kotlinVersion}</version>
                     <executions>
                         <execution>
                             <id>kotlin-compile</id>
